springboot apps/bikeapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bikeapp-ingress
  annotations:
    konghq.com/host-aliases: "example.com,example.net"
  namespace: app-namespace
spec:
  rules:
  - host: "zion.trodobikeapp.com"
    http:
      paths:
      - path: "/hello"
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 8013
